--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "work-repo",
+  "name": "essential-course-repository",
   "version": "1.0.0",
-  "description": "",
+  "description": "essential-course",
   "main": "index.js",
   "scripts": {
-    "test": "eslint ./app/**",
-    "fix": "eslint ./app/** --fix"
+    "eslint:lint": "eslint ./app/**/*.js",
+    "stylelint:lint": "stylelint './app/**/*.css'",
+    "test": "npm run eslint:lint & npm run stylelint:lint",
+    "eslint:fix": "eslint ./app/**/*.js --fix",
+    "stylelint:fix": "stylelint './**/*.css' --fix"
   },
   "keywords": [],
-  "author": "",
+  "author": "Maximumstart",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^4.19.1"
+    "eslint": "4.19.1",
+    "stylelint": "9.3.0",
+    "eslint-config-airbnb-base": "11.1.0",
+    "eslint-plugin-import": "2.12.0"
   }
 }
